// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddLabelsForm render should render a base action 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  className="dialog"
  headerClass="add_input_labels"
  title="Add label"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Label the incoming message",
        "form": [Function],
        "name": "Add label",
        "type": "add_input_labels",
        "visibility": Array [
          "messaging",
          "messaging_offline",
          "voice",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    assets={
      Object {
        "items": Object {},
        "type": "label",
      }
    }
    createAssetFromInput={[Function]}
    createPrefix="Create label: "
    entry={
      Object {
        "value": Array [
          Object {
            "name": "Help",
            "uuid": "232b99d1-579f-4d7f-b750-4b034927e9f8",
          },
          Object {
            "name": "Feedback",
            "uuid": "ab58dffa-98da-40ba-bebc-489ec6ff7170",
          },
        ],
      }
    }
    expressions={true}
    multi={true}
    name="Labels"
    namePure="Select the labels to apply to the incoming message"
    onAssetCreated={[Function]}
    onChange={[Function]}
    placeholder="Enter the name of an existing label or create a new one"
    searchable={true}
    showLabel={true}
  />
</Dialog>
`;

exports[`AddLabelsForm updates should allow switching from router: switch from router 1`] = `
Array [
  Object {
    "labels": Array [
      Object {
        "id": "feedback_label",
        "name": "Feedback",
        "type": "label",
      },
    ],
    "type": "add_input_labels",
    "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
  },
]
`;

exports[`AddLabelsForm updates should update and save 1`] = `
Object {
  "labels": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "feedback_label",
        "name": "Feedback",
        "type": "label",
      },
    ],
  },
  "valid": true,
}
`;

exports[`AddLabelsForm updates should update and save: update label 1`] = `
Array [
  Object {
    "labels": Array [
      Object {
        "id": "feedback_label",
        "name": "Feedback",
        "type": "label",
      },
    ],
    "type": "add_input_labels",
    "uuid": "aa15ef19-da81-43d0-b6e5-84b47216aeb8",
  },
]
`;
